--- a/metadata.desktop
+++ b/metadata.desktop
@@ -22,10 +22,10 @@ X-KDE-ServiceTypes=Plasma/Comic
 Icon=icon.png
 
 X-KDE-Library=plasma_comic_krossprovider
-X-KDE-PluginInfo-Author=Matthias Fuchs
-X-KDE-PluginInfo-Email=mat69@gmx.net
+X-KDE-PluginInfo-Author=Cameron Gray
+X-KDE-PluginInfo-Email=cameron@camerongray.me
 X-KDE-PluginInfo-Name=dilbert
-X-KDE-PluginInfo-Version=1.2
+X-KDE-PluginInfo-Version=2.0
 X-KDE-PluginInfo-Website=http://plasma.kde.org/
 X-KDE-PluginInfo-License=GPLv2
 X-KDE-PluginInfo-EnabledByDefault=true
